--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,17 +1,19 @@
+<!DOCTYPE html>
 <html>
-<h1>Make your form here</h1>
-    <form action="/show" method="POST">
-        Pirate Name: <input type="text" name="pirate[name]">
-        Pirate Height: <input type="text" name="pirate[height]">
-        Pirate Weight: <input type="text" name="pirate[weight]">
-        <br>
-        Ship Name: <input id="ship_name_1" type="text" name="pirate[ships][][name]">
-        Ship Type: <input id="ship_type_1" type="text" name="pirate[ships][][type]">
-        Ship Booty: <input id="ship_booty_1" type="text" name="pirate[ships][][booty]">
-        <br>
-        Ship Name: <input id="ship_name_2" type="text" name="pirate[ships][][name]">
-        Ship Type: <input id="ship_type_2" type="text" name="pirate[ships][][type]">
-        Ship Booty: <input id="ship_booty_2" type="text" name="pirate[ships][][booty]">
-        <input type="submit">
-    </form>
+    
+        <body>
+            <h1>Make your form here</h1>
+            <form method="POST" action="/show" >
+                <label>Pirate Name: <input id="pirate[name]" type="text" name="pirate[name]"></label><br/>
+                <label>Pirate Height: <input id="pirate[height]" type="text" name="pirate[height]"></label><br/>
+                <label>Pirate Weight: <input id="pirate[weight]" type="text" name="pirate[weight]"></label><br/>
+                <label>Ship Name: <input id="ship_name_1" type="text" name="pirate[ships][][name]"></label><br/>
+                <label>Ship Type: <input id="ship_type_1" type="text" name="pirate[ships][][type]"></label><br/>
+                <label>Ship Booty: <input id="ship_booty_1" type="text" name="pirate[ships][][booty]"></label><br/>
+                <label>Ship Name: <input id="ship_name_2" type="text" name="pirate[ships][][name]"></label><br/>
+                <label>Ship Type: <input id="ship_type_2" type="text" name="pirate[ships][][type]"></label><br/>
+                <label>Ship Booty: <input id="ship_booty_2" type="text" name="pirate[ships][][booty]"></label><br/>
+                <input type="submit" id="Submit" />
+            </form>
+        </body>
 </html>
