--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,19 +1,27 @@
-<!DOCTYPE html>
-<html>
-    
-        <body>
-            <h1>Make your form here</h1>
-            <form method="POST" action="/show" >
-                <label>Pirate Name: <input id="pirate[name]" type="text" name="pirate[name]"></label><br/>
-                <label>Pirate Height: <input id="pirate[height]" type="text" name="pirate[height]"></label><br/>
-                <label>Pirate Weight: <input id="pirate[weight]" type="text" name="pirate[weight]"></label><br/>
-                <label>Ship Name: <input id="ship_name_1" type="text" name="pirate[ships][][name]"></label><br/>
-                <label>Ship Type: <input id="ship_type_1" type="text" name="pirate[ships][][type]"></label><br/>
-                <label>Ship Booty: <input id="ship_booty_1" type="text" name="pirate[ships][][booty]"></label><br/>
-                <label>Ship Name: <input id="ship_name_2" type="text" name="pirate[ships][][name]"></label><br/>
-                <label>Ship Type: <input id="ship_type_2" type="text" name="pirate[ships][][type]"></label><br/>
-                <label>Ship Booty: <input id="ship_booty_2" type="text" name="pirate[ships][][booty]"></label><br/>
+
+            <form method="POST" action="/pirates" >
+                <h2>Pirate</h2>
+                <label for="pirate_name">Name</label><br>
+                <input id="pirate_name" type="text" name="pirate[name]" /><br>
+                <label for="pirate_weight">Weight</label><br>
+                <input id="pirate_weight" type="text" name="pirate[weight]" /><br>
+                <label for="pirate_height">Height</label><br>
+                <input id="pirate_height" type="text" name="pirate[height]" /><br><br>
+
+                <h2>Ships</h2>
+                <label for="ship_name_1">Name</label><br>
+                <input id="ship_name_1" type="text" name="pirate[ships][][name]">
+                <label for="ship_type_1">Type</label><br>
+                <input id="ship_type_1" type="text" name="pirate[ships][][type]">
+                <label for="ship_booty_1">Booty</label><br>
+                <input id="ship_booty_1" type="text" name="pirate[ships][][booty]"><br>
+
+                <label for="ship_name_2">Name</label><br>
+                <input id="ship_name_2" type="text" name="pirate[ships][][name]">
+                <label for="ship_type_2">Type</label><br>
+                <input id="ship_type_2" type="text" name="pirate[ships][][type]">
+                <label for="ship_booty_2">Booty</label><br>
+                <input id="ship_booty_2" type="text" name="pirate[ships][][booty]">
                 <input type="submit" id="Submit" />
             </form>
-        </body>
-</html>
+ 
